--- a/src/app/components/analytics/analytics.module.scss
+++ b/src/app/components/analytics/analytics.module.scss
@@ -1,3 +1,4 @@
+@use "../../mixins" as *;
 .analytics {
   display: flex;
   flex-direction: column;
@@ -10,6 +11,18 @@
   background: #fafafa;
   padding-top: 8rem;
   padding-bottom: 8rem;
+  display: flex;
+  flex-direction: column;
+
+  @include breakpoint(mobile) {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
 }
 
 .heading {
@@ -19,6 +32,36 @@
   line-height: 120%;
   letter-spacing: -0.108rem;
   margin-bottom: 0.6rem;
+  font-family: var(--euclid-circular-a);
+  position: relative;
+  align-self: flex-start;
+
+  @include breakpoint(mobile) {
+    font-size: 2.4rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 120%; /* 2.88rem */
+    letter-spacing: -0.072rem;
+  }
+  &::after {
+    content: "";
+    position: absolute;
+    left: 100%;
+    top: 0;
+    pointer-events: none;
+    width: 7.2rem;
+    height: 7.1rem;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url("/analytics-arrow.svg");
+    margin-left: 1rem;
+    margin-top: 1.5rem;
+
+    @include breakpoint(mobile) {
+      display: none;
+    }
+  }
 }
 
 .text {
@@ -30,12 +73,27 @@
   color: rgba(#353131, 0.7);
   font-family: var(--euclid-circular-a);
   margin-bottom: 3.5rem;
+
+  @include breakpoint(mobile) {
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 2.2rem; /* 137.5% */
+    letter-spacing: -0.016rem;
+    margin-bottom: 2rem;
+  }
 }
 
 .row {
   display: grid;
   grid-template-columns: minmax(0, 35rem) 1fr;
   grid-gap: 2rem;
+
+  @include breakpoint(mobile) {
+    display: flex;
+    flex-direction: column;
+    gap: 2.4rem;
+  }
 }
 
 .sidebar {
@@ -44,6 +102,10 @@
   position: sticky;
   left: 0;
   top: 0;
+
+  @include breakpoint(mobile) {
+    position: static;
+  }
 }
 
 .main {
@@ -56,12 +118,33 @@
   border-radius: 2.4rem;
   border: 1px solid #ebeaea;
   background: #fff;
+  gap: 3rem;
+  display: flex;
+  flex-direction: column;
+  position: sticky;
+  top: 2rem;
+  left: 0;
+
+  @include breakpoint(mobile) {
+    padding: 2rem;
+    border-radius: 2.4rem;
+    border: 1px solid #ebeaea;
+    background: #fff;
+    gap: 3rem;
+    position: relative;
+    top: auto;
+    left: auto;
+    z-index: 20;
+  }
 }
 
 .filtersBlock {
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
+  @include breakpoint(mobile) {
+    gap: 2rem;
+  }
 }
 
 .filtersBlockTitle {
@@ -71,10 +154,85 @@
   line-height: 2.4rem;
   letter-spacing: -0.02rem;
   font-family: var(--euclid-circular-a);
+
+  @include breakpoint(mobile) {
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 2.4rem; /* 120% */
+    letter-spacing: -0.02rem;
+  }
 }
 
+.filtersCheckboxes {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+
+.filtersCheckbox {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 2.2rem;
+  letter-spacing: -0.036rem;
+
+  @include breakpoint(mobile) {
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 2rem; /* 125% */
+    letter-spacing: -0.032rem;
+  }
+
+  &.active {
+    .filtersCheckmark {
+      border-color: #4fbb06;
+      background: #52ca01;
+
+      svg {
+        opacity: 1;
+      }
+    }
+  }
+}
+
+.filtersCheckmark {
+  border-radius: 1rem;
+  border: 1px solid #ebeaea;
+  background: #fff;
+  height: 2.8rem;
+  width: 2.8rem;
+  flex-shrink: 0;
+  display: grid;
+  place-items: center;
+  transition: background-color 0.2s, border-color 0.2s;
+
+  @include breakpoint(mobile) {
+    width: 2.4rem;
+    height: 2.4rem;
+    border-radius: 0.8rem;
+  }
+  svg {
+    display: block;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.2s;
+    fill: white;
+  }
+}
 .charts {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   grid-gap: 2rem;
+  @include breakpoint(mobile) {
+    display: flex;
+    flex-direction: column;
+    gap: 2.4rem;
+  }
 }
