--- a/src/app/components/callback/callback.module.scss
+++ b/src/app/components/callback/callback.module.scss
@@ -28,6 +28,43 @@
   gap: 4.6rem;
   grid-column: 1 / 7;
   padding-right: 4rem;
+  position: relative;
+  z-index: 1;
+  &::before {
+    content: "";
+    background-image: url("/telegram-logo.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    pointer-events: none;
+    z-index: -1;
+    width: 41.8rem;
+    height: 32.5rem;
+    position: absolute;
+    top: 9rem;
+    right: -10rem;
+
+    @include breakpoint(mobile) {
+      display: none;
+    }
+  }
+
+  &::after {
+    content: "";
+    margin-top: 4.3rem;
+    width: 12.5rem;
+    height: 9.4rem;
+    margin-left: auto;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url("/curved-arrow.svg");
+    margin-right: 6rem;
+
+    @include breakpoint(mobile) {
+      display: none;
+    }
+  }
 
   @include breakpoint(mobile) {
     display: contents;
@@ -40,7 +77,7 @@
   font-weight: 500;
   line-height: 4.2rem;
   letter-spacing: -0.108rem;
-
+  font-family: var(--euclid-circular-a);
   @include breakpoint(mobile) {
     font-size: 2.4rem;
     font-style: normal;
@@ -53,6 +90,8 @@
 .rightCol {
   grid-column: 7 / -1;
   margin-left: -4rem;
+  position: relative;
+  z-index: 15;
 
   @include breakpoint(mobile) {
     display: contents;
@@ -133,6 +172,7 @@
   font-weight: 500;
   line-height: 2.4rem;
   letter-spacing: -0.02rem;
+  font-family: var(--euclid-circular-a);
 }
 
 .radioItems {
@@ -242,6 +282,7 @@
   line-height: 1.8rem;
   letter-spacing: -0.014rem;
   color: rgba(53, 49, 49, 0.5);
+  font-family: var(--euclid-circular-a);
 
   @include breakpoint(mobile) {
     font-size: 1.4rem;
