--- a/src/app/components/prepare/prepare.module.scss
+++ b/src/app/components/prepare/prepare.module.scss
@@ -24,7 +24,7 @@
   line-height: 120%;
   letter-spacing: -0.108rem;
   grid-column: 1 / 6;
-
+  font-family: var(--euclid-circular-a);
   @include breakpoint(mobile) {
     font-size: 2.4rem;
     font-style: normal;
@@ -100,6 +100,7 @@
   font-weight: 500;
   line-height: 2.8rem;
   letter-spacing: -0.024rem;
+  font-family: var(--euclid-circular-a);
   @include breakpoint(mobile) {
     font-size: 2rem;
     font-style: normal;
@@ -117,7 +118,7 @@
   letter-spacing: -0.018rem;
   color: rgba(#353131, 0.7);
   grid-column: 5 / -1;
-
+  font-family: var(--euclid-circular-a);
   @include breakpoint(mobile) {
     font-size: 1.6rem;
     font-style: normal;
