--- a/src/app/components/select/select.module.scss
+++ b/src/app/components/select/select.module.scss
@@ -70,6 +70,15 @@
   top: 100%;
   z-index: 5;
   padding-top: 0.6rem;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.4s, visibility 0s linear 0.4s;
+
+  &.active {
+    opacity: 1;
+    visibility: inherit;
+    transition: opacity 0.4s, visibility 0.4s;
+  }
 }
 
 .dropdownInner {
