--- a/src/app/components/CallbackModal/styles.module.scss
+++ b/src/app/components/CallbackModal/styles.module.scss
@@ -93,9 +93,13 @@
     color: #aaa;
   }
 
-  &:focus {
+  &:not(.inputInvalid):focus {
     border-color: var(--primary-color);
   }
+}
+
+.inputInvalid {
+  border-color: red;
 }
 
 .submit {
@@ -111,9 +115,13 @@
   background: #52ca01;
   color: white;
   align-self: stretch;
-  transition: background-color 0.2s, color 0.2s;
+  transition: background-color 0.2s, color 0.2s, opacity 0.2s;
+  &[disabled] {
+    opacity: 0.5;
+    cursor: default;
+  }
   @media (hover: hover) and (pointer: fine) {
-    &:hover {
+    &:not([disabled]):hover {
       background: var(--primary-color-hover);
     }
   }
@@ -128,4 +136,11 @@
     border-radius: 1.8rem;
     justify-content: center;
   }
+}
+
+.validationError {
+  color: red;
+  font-size: 1.4rem;
+  line-height: 1.2;
+  margin-top: 0.5rem;
 }
