--- a/src/app/components/Select/styles.module.scss
+++ b/src/app/components/Select/styles.module.scss
@@ -106,6 +106,7 @@
 .scrollContainer {
   overflow-x: hidden;
   max-height: 16.6rem;
+  max-height: 26.7rem;
 
   &::-webkit-scrollbar {
     width: 4px;
